adicionando começo da logica de candidatos e o fluxo ainda em teste do fenomeno
